--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
-    "@babel/core": "^7.12.7",
+    "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
@@ -13,13 +13,13 @@
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@svgr/webpack": "5.5.0",
     "animate.css": "^4.1.1",
-    "babel-loader": "8.2.1",
+    "babel-loader": "8.2.2",
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
     "bfj": "^7.0.2",
     "camelcase": "^6.2.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "core-js": "^3.7.0",
+    "core-js": "^3.8.0",
     "css-loader": "5.0.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -32,7 +32,7 @@
     "rc-tabs": "^11.7.2",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
-    "react-dev-utils": "^11.0.0",
+    "react-dev-utils": "^11.0.1",
     "react-dom": "^17.0.1",
     "react-refresh": "^0.9.0",
     "react-router-dom": "^5.2.0",
@@ -49,14 +49,14 @@
     "webpack": "4.44.2",
     "webpack-dev-server": "3.11.0",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "5.1.4"
+    "workbox-webpack-plugin": "6.0.0"
   },
   "homepage": "https://zerosoul.github.io/one-stop-nav",
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "predeploy": "yarn build",
-    "deploy": "gh-pages -d build -f"
+    "deploy": "gh-pages -d build -f -r https://github.com/zerosoul/one-stop-nav.git"
   },
   "browserslist": {
     "production": [
@@ -80,7 +80,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "gh-pages": "^3.1.0",
     "husky": "^4.3.0",
-    "lint-staged": "^10.5.1",
-    "prettier": "^2.2.0"
+    "lint-staged": "^10.5.2",
+    "prettier": "^2.2.1"
   }
 }
