--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,8 @@
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "max-lines": ["warn", { "max": 500 }],
-    "react/display-name": 0
+    "react/display-name": 0,
+    "react/jsx-no-target-blank":0
   },
   "parser": "@babel/eslint-parser",
   "parserOptions": {
