--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
+    "@apollo/client": "^3.3.4",
     "@babel/core": "^7.12.9",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
@@ -25,6 +26,7 @@
     "dotenv-expand": "5.1.0",
     "file-loader": "6.2.0",
     "fs-extra": "^9.0.1",
+    "graphql": "^15.4.0",
     "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
     "mini-css-extract-plugin": "1.3.1",
@@ -44,6 +46,7 @@
     "styled-normalize": "^8.0.7",
     "swiper": "^6.3.5",
     "terser-webpack-plugin": "4.2.3",
+    "timeago.js": "^4.0.2",
     "url-loader": "4.1.1",
     "web-vitals": "^1.0.1",
     "webpack": "4.44.2",
