fix: change to hash router

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_GH_OAUTH=https://api.yangerxiao.com/oauth/github/portal
-REACT_APP_GH_REDIRECT=https://zersoul.github.io/one-stop-nav/oauth/github
+REACT_APP_GH_REDIRECT=https://zerosoul.github.io/one-stop-nav/#oauth/github
