--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "6.0.0"
   },
-  "homepage": "https://zerosoul.github.io/one-stop-nav",
+  "homepage": "https://nav.yangerxiao.com",
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
