--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 REACT_APP_GH_OAUTH=https://api.yangerxiao.com/oauth/github/portal
 REACT_APP_GH_REDIRECT=https://nav.yangerxiao.com/oauth/github
+REACT_APP_WB_OAUTH=https://api.yangerxiao.com/oauth/weibo/portal
+REACT_APP_WB_REDIRECT=https://nav.yangerxiao.com/oauth/weibo
