fix: define api domain

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+REACT_APP_SERVICE_DOMAIN=https://api.yangerxiao.com
 REACT_APP_GH_OAUTH=https://api.yangerxiao.com/oauth/github/portal
 REACT_APP_GH_REDIRECT=http://nicegoodthings.com/oauth/github
