--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "rc-tabs": "^11.7.2",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dev-utils": "^11.0.1",
     "react-dom": "^17.0.1",
     "react-refresh": "^0.9.0",
