--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
+REACT_APP_SERVICE_DOMAIN=http://localhost:3008
 REACT_APP_GH_OAUTH=http://localhost:3008/oauth/github/portal
+REACT_APP_GH_REDIRECT=http://nicegoodthings.com/oauth/github
