--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-beautiful-dnd": "^13.0.0",
     "react-dev-utils": "^11.0.1",
     "react-dom": "^17.0.1",
+    "react-ga": "^3.3.0",
     "react-refresh": "^0.9.0",
     "react-router-dom": "^5.2.0",
     "resolve": "1.19.0",
