feat: add & remove item

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "swiper": "^6.4.5",
     "terser-webpack-plugin": "4.2.3",
     "timeago.js": "^4.0.2",
+    "uniqolor": "^1.0.1",
     "url-loader": "4.1.1",
     "web-vitals": "^1.0.1",
     "webpack": "4.44.2",
