--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-preset-react-app": "^10.0.0",
     "bfj": "^7.0.2",
+    "body-scroll-lock": "^3.1.5",
     "camelcase": "^6.2.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "core-js": "^3.8.1",
