--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-app-polyfill": "^2.0.0",
     "react-beautiful-dnd": "^13.0.0",
     "react-dev-utils": "^11.0.1",
+    "react-dnd": "^11.1.3",
+    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
     "react-hotjar": "^2.2.1",
