--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
     "react-hotjar": "^2.2.1",
+    "react-intersection-observer": "^8.31.0",
     "react-refresh": "^0.9.0",
     "react-router-dom": "^5.2.0",
     "resolve": "1.19.0",
