--- a/package.json
+++ b/package.json
@@ -33,13 +33,9 @@
     "jinrishici": "^1.0.6",
     "mini-css-extract-plugin": "1.3.3",
     "pnp-webpack-plugin": "1.6.4",
-    "rc-tabs": "^11.7.3",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
-    "react-beautiful-dnd": "^13.0.0",
     "react-dev-utils": "^11.0.1",
-    "react-dnd": "^11.1.3",
-    "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^17.0.1",
     "react-hotjar": "^2.2.1",
     "react-intersection-observer": "^8.31.0",
@@ -48,6 +44,7 @@
     "resolve": "1.19.0",
     "resolve-url-loader": "^3.1.2",
     "semver": "7.3.4",
+    "sortablejs": "^1.13.0",
     "style-loader": "2.0.0",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4",
