--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.9.0",
   "private": false,
   "dependencies": {
-    "@apollo/client": "^3.3.6",
+    "@apollo/client": "^3.3.7",
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
@@ -21,19 +21,20 @@
     "body-scroll-lock": "^3.1.5",
     "camelcase": "^6.2.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "core-js": "^3.8.1",
+    "core-js": "^3.8.3",
     "css-loader": "5.0.1",
     "date-fns": "^2.16.1",
     "date-fns-tz": "^1.0.12",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "fetch-jsonp": "^1.1.3",
     "file-loader": "6.2.0",
-    "fs-extra": "^9.0.1",
+    "fs-extra": "^9.1.0",
     "graphql": "^15.4.0",
-    "html-webpack-plugin": "4.5.0",
+    "html-webpack-plugin": "4.5.1",
     "identity-obj-proxy": "3.0.0",
     "jinrishici": "^1.0.6",
-    "mini-css-extract-plugin": "1.3.3",
+    "mini-css-extract-plugin": "1.3.4",
     "pnp-webpack-plugin": "1.6.4",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
@@ -51,14 +52,14 @@
     "style-loader": "2.0.0",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4",
-    "swiper": "^6.4.5",
+    "swiper": "^6.4.8",
     "terser-webpack-plugin": "4.2.3",
     "timeago.js": "^4.0.2",
     "uniqolor": "^1.0.1",
     "url-loader": "4.1.1",
-    "web-vitals": "^1.0.1",
+    "web-vitals": "^1.1.0",
     "webpack": "4.44.2",
-    "webpack-dev-server": "3.11.1",
+    "webpack-dev-server": "3.11.2",
     "webpack-manifest-plugin": "3.0.0",
     "workbox-webpack-plugin": "6.0.2"
   },
@@ -81,11 +82,11 @@
     "@babel/eslint-parser": "^7.12.1",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "eslint": "^7.16.0",
-    "eslint-config-prettier": "^7.1.0",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^4.3.6",
+    "husky": "^4.3.8",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1"
   }
