--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "date-fns-tz": "^1.0.12",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "fetch-jsonp": "^1.1.3",
     "file-loader": "6.2.0",
+    "fork-me-on-github": "^1.0.6",
     "fs-extra": "^9.1.0",
     "graphql": "^15.4.0",
     "html-webpack-plugin": "4.5.1",
