--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "timeago.js": "^4.0.2",
     "uniqolor": "^1.0.1",
     "url-loader": "4.1.1",
+    "url-search-params-polyfill": "^8.1.0",
     "web-vitals": "^1.1.0",
     "webpack": "4.44.2",
     "webpack-dev-server": "3.11.2",
