--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "file-loader": "6.2.0",
+    "file-saver": "^2.0.5",
     "fork-me-on-github": "^1.0.6",
     "fs-extra": "^9.1.0",
     "graphql": "^15.4.0",
