--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "case-sensitive-paths-webpack-plugin": "2.3.0",
     "core-js": "^3.8.3",
     "css-loader": "5.0.1",
+    "darkmode-js": "^1.5.7",
     "date-fns": "^2.16.1",
     "date-fns-tz": "^1.0.12",
     "dotenv": "8.2.0",
