feat: support build chrome extension
支持生成谷歌浏览器扩展

--- a/package.json
+++ b/package.json
@@ -69,7 +69,9 @@
   "homepage": "https://nicegoodthings.com",
   "scripts": {
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js"
+    "build": "node scripts/build.js",
+    "start:cxt": "REACT_APP_CHROME_EXT=true node scripts/start.js",
+    "build:cxt": "REACT_APP_CHROME_EXT=true node scripts/build.js"
   },
   "browserslist": {
     "production": [
