--- a/package.json
+++ b/package.json
@@ -70,8 +70,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "start:cxt": "REACT_APP_CHROME_EXT=true node scripts/start.js",
-    "build:cxt": "REACT_APP_CHROME_EXT=true node scripts/build.js"
+    "start:crx": "REACT_APP_CHROME_EXT=true node scripts/start.js",
+    "build:crx": "REACT_APP_CHROME_EXT=true node scripts/build.js"
   },
   "browserslist": {
     "production": [
