--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-intersection-observer": "^8.31.0",
     "react-refresh": "^0.9.0",
     "react-router-dom": "^5.2.0",
+    "relationship.js": "^1.0.0",
     "resolve": "1.19.0",
     "resolve-url-loader": "^3.1.2",
     "semver": "7.3.4",
