build: add env var INLINE_RUNTIME_CHUNK

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+INLINE_RUNTIME_CHUNK=false
 REACT_APP_SERVICE_DOMAIN=https://api.yangerxiao.com
 REACT_APP_GH_OAUTH=https://api.yangerxiao.com/oauth/github/portal
 REACT_APP_GH_REDIRECT=http://nicegoodthings.com/oauth/github
