--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "Portal China Lite",
+  "name": "有点东西 Portal个人主页 ",
   "short_name": "Portal",
-  "description": "Widget your life!",
-  "version": "1.0",
+  "description": "像积木一样自由组建你的浏览器主页！",
+  "version": "1.0.1",
   "manifest_version": 2,
   "homepage_url": "https://nicegoodthings.com/",
   "permissions": ["*://*/"],
