--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.9.0",
   "private": false,
   "dependencies": {
-    "@apollo/client": "^3.3.7",
-    "@babel/core": "^7.12.10",
-    "@babel/plugin-proposal-class-properties": "^7.12.1",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
+    "@apollo/client": "^3.3.11",
+    "@babel/core": "^7.12.17",
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.13",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-env": "^7.12.17",
+    "@babel/preset-react": "^7.12.13",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@svgr/webpack": "5.5.0",
     "animate.css": "^4.1.1",
@@ -21,41 +21,41 @@
     "body-scroll-lock": "^3.1.5",
     "camelcase": "^6.2.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "core-js": "^3.8.3",
-    "css-loader": "5.0.1",
+    "core-js": "^3.9.0",
+    "css-loader": "5.0.2",
     "darkmode-js": "^1.5.7",
-    "date-fns": "^2.16.1",
-    "date-fns-tz": "^1.0.12",
+    "date-fns": "^2.17.0",
+    "date-fns-tz": "^1.1.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "file-loader": "6.2.0",
     "file-saver": "^2.0.5",
     "fork-me-on-github": "^1.0.6",
     "fs-extra": "^9.1.0",
-    "graphql": "^15.4.0",
+    "graphql": "^15.5.0",
     "html-webpack-plugin": "4.5.1",
     "identity-obj-proxy": "3.0.0",
     "jinrishici": "^1.0.6",
-    "mini-css-extract-plugin": "1.3.4",
+    "mini-css-extract-plugin": "1.3.8",
     "pnp-webpack-plugin": "1.6.4",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-clock": "^3.0.0",
-    "react-dev-utils": "^11.0.1",
+    "react-dev-utils": "^11.0.2",
     "react-dom": "^17.0.1",
     "react-hotjar": "^2.2.1",
     "react-intersection-observer": "^8.31.0",
     "react-refresh": "^0.9.0",
     "react-router-dom": "^5.2.0",
     "relationship.js": "^1.0.0",
-    "resolve": "1.19.0",
+    "resolve": "1.20.0",
     "resolve-url-loader": "^3.1.2",
     "semver": "7.3.4",
     "sortablejs": "^1.13.0",
     "style-loader": "2.0.0",
     "styled-components": "^5.2.1",
     "styled-reset": "^4.3.4",
-    "swiper": "^6.4.8",
+    "swiper": "^6.4.15",
     "terser-webpack-plugin": "4.2.3",
     "timeago.js": "^4.0.2",
     "uniqolor": "^1.0.1",
@@ -65,14 +65,17 @@
     "webpack": "4.44.2",
     "webpack-dev-server": "3.11.2",
     "webpack-manifest-plugin": "3.0.0",
-    "workbox-webpack-plugin": "6.0.2"
+    "workbox-webpack-plugin": "6.1.0"
   },
   "homepage": "https://nicegoodthings.com",
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "start:crx": "REACT_APP_CHROME_EXT=true node scripts/start.js",
-    "build:crx": "REACT_APP_CHROME_EXT=true node scripts/build.js"
+    "build:crx": "REACT_APP_CHROME_EXT=true node scripts/build.js",
+    "postinstall": "husky install",
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   },
   "browserslist": {
     "production": [
@@ -85,15 +88,16 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.12.1",
+    "@babel/eslint-parser": "^7.12.17",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "eslint": "^7.18.0",
+    "eslint": "^7.20.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "husky": "^4.3.8",
-    "lint-staged": "^10.5.3",
+    "husky": "^5.0.9",
+    "lint-staged": "^10.5.4",
+    "pinst": "^2.1.4",
     "prettier": "^2.2.1"
   }
 }
