--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": false,
   "dependencies": {
     "@apollo/client": "^3.3.11",
+    "@authing/sso": "^1.7.2",
     "@babel/core": "^7.12.17",
     "@babel/plugin-proposal-class-properties": "^7.12.13",
     "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.13",
