--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
+INLINE_RUNTIME_CHUNK=false
 REACT_APP_SERVICE_DOMAIN=http://localhost:3008
 REACT_APP_GH_OAUTH=http://localhost:3008/oauth/github/portal
 REACT_APP_GH_REDIRECT=http://nicegoodthings.com/oauth/github
+REACT_APP_GOOGLE_CALENDAR_CID=xxxxxxx.apps.googleusercontent.com
 
-INLINE_RUNTIME_CHUNK=false
