--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "html-webpack-plugin": "4.5.1",
     "identity-obj-proxy": "3.0.0",
     "jinrishici": "^1.0.6",
+    "linkifyjs": "^2.1.9",
     "mini-css-extract-plugin": "1.3.8",
     "pnp-webpack-plugin": "1.6.4",
     "react": "^17.0.1",
