--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dom": "^17.0.1",
     "react-hotjar": "^2.2.1",
     "react-intersection-observer": "^8.31.0",
+    "react-loading-skeleton": "^2.2.0",
     "react-refresh": "^0.9.0",
     "react-router-dom": "^5.2.0",
     "relationship.js": "^1.0.0",
