--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,16 +2,20 @@
   "name": "Widget Portal",
   "short_name": "Portal",
   "description": "像积木一样自由组建你的浏览器主页！",
-  "version": "1.1.2",
+  "version": "1.3.0",
   "manifest_version": 2,
   "homepage_url": "https://nicegoodthings.com/",
-  "permissions": ["tabs", "https://nicegoodthings.com/*", "https://api.yangerxiao.com/*"],
-  "content_security_policy": "script-src 'self'; object-src 'self'; img-src https: data: http: chrome:;",
+  "permissions": ["tabs", "identity", "<all_urls>"],
+  "content_security_policy": "script-src 'self' https://apis.google.com; object-src 'self'; img-src https: data: http: chrome:;",
   "icons": {
     "16": "/favicon-16x16.png",
     "32": "/favicon-32x32.png",
     "48": "/android-chrome-192x192.png",
     "128": "/android-chrome-192x192.png"
+  },
+  "oauth2": {
+    "client_id": "1034738316090-tf816ulnekevogf577eron4d6iktdu01.apps.googleusercontent.com",
+    "scopes": ["https://www.googleapis.com/auth/calendar"]
   },
   "chrome_url_overrides": {
     "newtab": "/index.html"
