--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,11 +2,11 @@
   "name": "Widget Portal",
   "short_name": "Portal",
   "description": "像积木一样自由组建你的浏览器主页！",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "manifest_version": 2,
   "homepage_url": "https://nicegoodthings.com/",
-  "permissions": ["tabs", "identity", "<all_urls>"],
-  "content_security_policy": "script-src 'self' https://apis.google.com; object-src 'self'; img-src https: data: http: chrome:;",
+  "permissions": ["tabs", "identity"],
+  "content_security_policy": "script-src 'self'; object-src 'self'; img-src https: data: http: chrome:;",
   "icons": {
     "16": "/favicon-16x16.png",
     "32": "/favicon-32x32.png",
@@ -22,16 +22,6 @@
   },
   "background": {
     "scripts": ["./crx/bg.js"]
-  },
-  "content_scripts": [
-    {
-      "matches": ["https://nicegoodthings.com/*"],
-      "js": ["./crx/content_script.js"]
-    }
-  ],
-  "browser_action": {
-    "default_title": "快速添加导航",
-    "default_popup": "./crx/popup/index.html"
   },
   "options_page": "./crx/option.html"
 }
