--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.1",
     "react-hotjar": "^2.2.1",
+    "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.31.0",
     "react-loading-skeleton": "^2.2.0",
     "react-refresh": "^0.9.0",
