feat: share 字儿少，事儿大。

--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
     "react-clock": "^3.0.0",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.1",
+    "react-github-btn": "^1.2.0",
     "react-hotjar": "^2.2.1",
     "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.31.0",
