--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jinrishici": "^1.0.6",
     "linkifyjs": "^2.1.9",
     "mini-css-extract-plugin": "1.3.9",
+    "peerjs": "^1.3.2",
     "pnp-webpack-plugin": "1.6.4",
     "react": "^17.0.1",
     "react-app-polyfill": "^2.0.0",
