refactor: rename vemos to vera

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -27,11 +27,11 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["crx/vemos/assets/peerjs.min.js", "crx/vemos/content_script.js"],
-      "css": ["crx/vemos/style.css"],
-      "run_at": "document_end"
+      "js": ["crx/vera/assets/peerjs.min.js", "crx/vera/content_script.js"],
+      "css": ["crx/vera/style.css"],
+      "run_at": "document_idle"
     }
   ],
-  "web_accessible_resources": ["crx/vemos/*"],
+  "web_accessible_resources": ["crx/vera/*"],
   "options_page": "./crx/option.html"
 }
