--- a/public/manifest.bak.json
+++ b/public/manifest.bak.json
@@ -27,7 +27,7 @@
     {
       "matches": ["<all_urls>"],
       "js": ["crx/content.js"],
-      "css": ["crx/assets/vemos.css"],
+      "css": ["crx/assets/vera.css"],
       "run_at": "document_end"
     }
   ],
