feat: widget Navs show visit history items

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,10 +2,10 @@
   "name": "Portal - Home of Your Web Apps",
   "short_name": "Portal",
   "description": "像积木一样自由组建你的浏览器主页！",
-  "version": "1.6.5",
+  "version": "1.6.15",
   "manifest_version": 2,
   "homepage_url": "https://nicegoodthings.com/",
-  "permissions": ["tabs", "identity"],
+  "permissions": ["tabs", "identity", "history"],
   "content_security_policy": "script-src 'self'; object-src 'self'; img-src https: data: http: chrome:;",
   "icons": {
     "16": "/favicon-16x16.png",
