--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "Portal - Home of Your Web Apps",
+  "name": "__MSG_extName__",
   "short_name": "Portal",
-  "description": "像积木一样自由组建你的浏览器主页！",
-  "version": "1.10.0",
+  "description": "__MSG_extDescription__",
+  "version": "1.12.1",
   "manifest_version": 2,
   "homepage_url": "https://nicegoodthings.com/",
   "permissions": ["tabs", "identity", "history", "storage"],
@@ -43,6 +43,8 @@
         "crx/vera/assets/body-pix@2.1.js",
         "crx/vera/assets/peerjs.min.js",
         "crx/vera/assets/plain.draggable.min.js",
+        "crx/vera/assets/rangy-core.js",
+        "crx/vera/assets/rangy-serializer.js",
         "crx/vera/assets/allow.copy.js",
         "crx/vera/content_script.js"
       ],
@@ -56,5 +58,6 @@
     }
   ],
   "web_accessible_resources": ["crx/vera/*"],
-  "options_page": "./crx/option.html"
+  "options_page": "./crx/option.html",
+  "default_locale": "en"
 }
