--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "darkmode-js": "^1.5.7",
     "date-fns": "^2.19.0",
     "date-fns-tz": "^1.1.3",
+    "deepmerge": "^4.2.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "file-loader": "6.2.0",
