--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
   "version": "1.12.1",
   "manifest_version": 2,
   "homepage_url": "https://nicegoodthings.com/",
-  "permissions": ["tabs", "identity", "history", "storage"],
+  "permissions": ["tabs", "identity", "storage"],
   "content_security_policy": "script-src 'self'; object-src 'self'; img-src https: data: http: chrome:;",
   "browser_action": {
     "default_icon": {
