--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "__MSG_extName__",
   "short_name": "Portal",
   "description": "__MSG_extDescription__",
-  "version": "1.13.1",
+  "version": "2.0.0",
   "manifest_version": 2,
   "homepage_url": "https://nicegoodthings.com/",
   "permissions": ["tabs", "identity", "storage"],
@@ -31,14 +31,13 @@
     "newtab": "/index.html"
   },
   "background": {
-    "scripts": ["./crx/bg.js"]
+    "scripts": ["./crx/bg.js", "./crx/hot-reload.js"]
   },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
       "exclude_matches": ["https://nicegoodthings.com/transfer/*"],
       "js": [
-        "crx/vera/assets/authing.min.js",
         "crx/vera/assets/tf.min.js",
         "crx/vera/assets/body-pix@2.1.js",
         "crx/vera/assets/peerjs.min.js",
@@ -46,7 +45,9 @@
         "crx/vera/assets/rangy-core.js",
         "crx/vera/assets/rangy-serializer.js",
         "crx/vera/assets/allow.copy.js",
-        "crx/vera/content_script.js"
+        "crx/vera/content_script.js",
+        "crx/static/js/runtime-indexExt.bundle.js",
+        "crx/static/js/indexExt.chunk.js"
       ],
       "css": ["crx/vera/style.css"],
       "run_at": "document_idle"
@@ -57,7 +58,7 @@
       "run_at": "document_idle"
     }
   ],
-  "web_accessible_resources": ["crx/vera/*"],
+  "web_accessible_resources": ["crx/*"],
   "options_page": "./crx/option.html",
   "default_locale": "en"
 }
