--- a/package.json
+++ b/package.json
@@ -61,6 +61,8 @@
     "resolve-url-loader": "^3.1.2",
     "semver": "7.3.5",
     "sortablejs": "^1.13.0",
+    "stream-chat": "^3.9.0",
+    "stream-chat-react": "^5.3.2",
     "style-loader": "2.0.0",
     "styled-components": "^5.2.3",
     "styled-reset": "^4.3.4",
