--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mini-css-extract-plugin": "1.5.0",
     "peerjs": "^1.3.2",
     "pnp-webpack-plugin": "1.6.4",
+    "pushy-sdk-web": "^1.0.8",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-clock": "^3.0.0",
@@ -56,6 +57,7 @@
     "react-refresh": "^0.10.0",
     "react-resizable": "^1.11.1",
     "react-router-dom": "^5.2.0",
+    "react-toast-notifications": "^2.4.4",
     "relationship.js": "^1.0.0",
     "resolve": "1.20.0",
     "resolve-url-loader": "^3.1.2",
