--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
     "react-clock": "^3.0.0",
+    "react-contenteditable": "^3.3.5",
     "react-copy-to-clipboard": "^5.0.3",
     "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
