--- a/public/manifest.json
+++ b/public/manifest.json
@@ -41,7 +41,7 @@
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "exclude_matches": ["https://nicegoodthings.com/transfer/*"],
+      "exclude_matches": ["https://nicegoodthings.com/*", "http://localhost:3666/*"],
       "js": [
         "crx/vera/assets/tf.min.js",
         "crx/vera/assets/body-pix@2.1.js",
@@ -60,7 +60,7 @@
       "run_at": "document_idle"
     },
     {
-      "matches": ["https://nicegoodthings.com/transfer/*"],
+      "matches": ["<all_urls>"],
       "js": ["crx/vera/catch.invite.id.js"],
       "run_at": "document_start"
     }
