--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
   "name": "__MSG_extName__",
   "short_name": "Portal",
   "description": "__MSG_extDescription__",
-  "version": "3.0.0",
+  "version": "3.1.3",
   "manifest_version": 2,
   "homepage_url": "https://nicegoodthings.com/",
   "permissions": ["tabs", "identity", "storage"],
@@ -55,7 +55,7 @@
       "run_at": "document_idle"
     },
     {
-      "matches": ["https://www.figma.com/*"],
+      "matches": ["https://www.figma.com/*", "https://*.notion.so/*"],
       "js": ["crx/vera/assets/allow.copy.js"],
       "run_at": "document_idle"
     },
